[3, 4단계 - 체스] 테바(김성겸) 미션 제출합니다. (#773)
* refactor: movableDirection 추상화로 메서드 개선

* refactor: 메서드 분리로 가독성 개선

* refactor: SlidingPiece 추상화

* refactor: SlidingPiece 관련 패키징

* refactor: JumpingPiece 추상화

* refactor: JumpingPiece 관련 패키징

* refactor: 스트림으로 메서드 개선

* refactor: SlidingPiece 패키지 이동

* refactor: BlackPawn,WhitePawn 으로 분리

* refactor: Pawn 패키징

* refactor: WhitePawn 시작 위치 캐싱

* fix: 제자리 이동 검증 오류 수정

* refactor: Menu, MoveCommand 패키지 이동

* refactor: 게임 상태 구현

* refactor: 게임 실행 역할을 Menu 에게 위임

* refactor: 리팩터링 컨트롤러로 교체

* docs: 기능명세서 수정

* feat: 현재 진영의 점수 현황 반환 기능 구현(Pawn 규칙 적용X)

* feat: 같은 File에 있는 Pawn은 0.5점으로 계산하는 기능 구현

* refactor: Pieces 로 움직임, 점수 계산 역할 분리

* refactor: 메서드 명 변경

* refactor: 스트림으로 메서드 개선

* refactor: 가독성 개선

* fix: SlidingPiece가 상대 말을 잡지 못하는 버그 수정

* comment: TODO 추가

* fix: JumpingPiece가 갈 수 없는 경로를 탐색하는 버그 수정

* test: 점수 현황 계산 테스트 케이스 추가

* comment: TODO 추가

* feat: status 명령 입력으로 점수 및 승패 출력 기능 구현

* feat: 킹이 죽으면 게임이 끝나는 기능 구현

* docs: 구현 완료 기능 체크

* chore: 도커 파일 추적 중지

* refactor: 상태 패키지 이동

* feat: DB 정보로 체스보드를 생성하는 기능 구현

* feat: DB 정보로 체스보드를 생성하는 기능 구현

* refactor: 체스보드를 DB 데이터로 생성하도록 변경

* feat: chessboard 업데이트 기능 구현

* feat: DB 에 저장된 현재 턴을 가져오는 기능 구현

* feat: 턴 진행상황을 업데이트 하는 기능 구현

* feat: 게임 이어서 진행 기능 구현

* feat: 종료 상태에서 조작시 예외 발생

* feat: Menu 객체에서 InputView 분리

* refactor: 가독성 개선

* refactor: 체스보드 초기화를 담당하는 객체 분리

* refactor: 테스트 코드만을 위한 생성자 제거

* test: 테스트 주석 수정

* comment: 완료 TODO 삭제

* comment: 주석 삭제

* refactor: Connection 생성 객체 분리로 DB 정합성 유지

* refactor: Connection 생성 객체 분리로 TurnDAO 테스트 시 DB 유지 기능 적용

* feat: DB 수정 기능에 트랜잭션 추가

* comment: 주석 삭제

* style: 라인 정렬

* rename: 카멜케이스로 이름 수정

* refactor: 조건문 표현을 긍정문으로 변경

* chore: 데이터베이스 접근을 위한 정보 숨김 처리

* refactor: getter 메서드명 get~ 으로 통일

* refactor: 기물의 점수를 필드로 분리

* refactor: 폰의 점수 계산 로직 폰에게 위임

* refactor: ConnectionPool 을 통해 Connection을 받아오고 반납할 수 있도록 수정

* r